tests/rosetta/out/Haskell/blum-integer.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/blum-integer.hs:137:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/blum-integer.hs:132:1
                 /workspace/mochi/tests/rosetta/out/Haskell/blum-integer.hs:137:1
    |
137 | main = do
    | ^^^^
